--- a/style.css
+++ b/style.css
@@ -2,6 +2,10 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
 
+::-webkit-scrollbar{
+    display: none;
+}
+
 
 *{
     margin: 0;
@@ -14,20 +18,20 @@
 /* menu */
 
 header{
-    border: solid;
-    background-color: blue;
+    background-color: #5bd4cead;
     padding: 20px;
+    box-shadow: 0px 0px 20px 1px #5bd4ce81;
 }
 
 header .inferface{
     display: flex;
     flex: auto;
+    
 }
 
 header h1{
     text-align: center;
     font-size: 35px;
-    color: white;
     padding-bottom: 20px;
 }
 
@@ -39,35 +43,104 @@ header ul{
 header li{
     display: inline-block;
     padding: 10px 30px;
-    background-color: blue;
-    border: solid 1px black;
+    background-color: #45aaa5ad;
+    border: solid 1px #5bd4ce81;
     transition: 0.2s;
     cursor: pointer;
     border-radius: 20px;
 }
 
 header li:hover{
-    background-color: aqua;
+    background-color: #132e2d6c;
 }
 
 header a{
     text-decoration: none;
-    color: white;
-    font: bold;
+    color: black;
+    font-weight: bold;
 }
 
 /* main */
 
 main{
-    padding: 20px 20px;
+    padding: 4% 8% 0 8%;
+    height: 100%;
 }
 
 main p{
-    padding: 20px 0px;
+    padding: 40px 0px;
     text-align: justify;
+}
+
+main p .ultimo-paragrafo{
+    padding-bottom: 0px;
+    margin: 0;
 }
 
 main .video{
     text-align: center;
     margin-bottom: 20px;
+}
+
+main .img{
+    display: flex;
+}
+
+main img{
+    margin: auto;
+}
+
+main .video{
+    display: flex;
+}
+main iframe{
+    margin: auto;
+}
+
+table {
+    width: 100%;
+    margin: 20px auto;
+    border-collapse: collapse;
+    background-color: white;
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+}
+
+thead {
+    background-color: #4cafaa;
+    width: 100;
+}
+
+th, td {
+    padding: 12px;
+    text-align: center;
+    border-bottom: 1px solid #ddd;
+}
+
+th {
+    font-weight: bold;
+    width: 100%;
+}
+
+td a{
+    color: black;
+    text-decoration: none;
+}
+
+td a:hover{
+    color: gray;
+}
+
+tbody tr:nth-child(even) {
+    background-color: #f9f9f9;
+}
+
+/* footer */
+
+footer{
+    background-color: #5bd4cead;
+    box-shadow: 0px 0px 20px 1px #5bd4ce81;
+}
+
+footer .footer{
+    height: 80px;
 }
